--- a/PhoenixTravelAgencyPro/pom.xml
+++ b/PhoenixTravelAgencyPro/pom.xml
@@ -156,6 +156,12 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.8.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.kohsuke.stapler</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.1-rev6</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<sourceDirectory>${basedir}/src</sourceDirectory>
