--- a/PhoenixTravelAgencyPro/pom.xml
+++ b/PhoenixTravelAgencyPro/pom.xml
@@ -157,7 +157,16 @@
 			<artifactId>json-lib</artifactId>
 			<version>2.1-rev6</version>
 		</dependency>
-
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>${basedir}/src</sourceDirectory>
