添加散拼团队 的部分功能

--- a/PhoenixTravelAgencyPro/config/dbconfig.properties
+++ b/PhoenixTravelAgencyPro/config/dbconfig.properties
@@ -3,4 +3,4 @@ jdbcurl=jdbc:mysql://localhost:3306/fenghuangdb?useUnicode=true&characterEncodin
 #数据库的用户名
 user = root
 #数据库的用户密码
-password =123456
+password =SA1234
