--- a/PhoenixTravelAgencyPro/.classpath
+++ b/PhoenixTravelAgencyPro/.classpath
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-<classpathentry including="**/*.java" kind="src" output="WebRoot/WEB-INF/classes" path="src"/>
-<classpathentry kind="src" path="config"/>
-<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
-<attributes>
-<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
-</attributes>
-</classpathentry>
-<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
+	<classpathentry including="**/*.java" kind="src" output="WebRoot/WEB-INF/classes" path="src"/>
+	<classpathentry kind="src" path="config"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/f/jpbm/jbpm-4.4/jbpm-4.4/jbpm.jar"/>
+	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
