--- a/PhoenixTravelAgencyPro/config/dbconfig.properties
+++ b/PhoenixTravelAgencyPro/config/dbconfig.properties
@@ -1,6 +1,6 @@
 #数据库的驱动类
-jdbcurl=jdbc:mysql://localhost:3306/fenghuangdb?useUnicode=true&characterEncoding=utf8
+jdbcurl=jdbc:mysql://localhost:3306/fhgl?useUnicode=true&characterEncoding=utf8
 #数据库的用户名
 user = root
 #数据库的用户密码u
-password =SA1234
+password =sa1234
