--- a/PhoenixTravelAgencyPro/config/dbconfig.properties
+++ b/PhoenixTravelAgencyPro/config/dbconfig.properties
@@ -2,5 +2,5 @@
 jdbcurl=jdbc:mysql://localhost:3306/fenghuangdb?useUnicode=true&characterEncoding=utf8
 #数据库的用户名
 user = root
-#数据库的用户密码u
-password =SA1234
+#数据库的用户密码
+password =123456
