--- a/PhoenixTravelAgencyPro/WebRoot/WEB-INF/web.xml
+++ b/PhoenixTravelAgencyPro/WebRoot/WEB-INF/web.xml
@@ -50,6 +50,6 @@
 	</servlet-mapping>
 	<display-name></display-name>
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.do</welcome-file>
 	</welcome-file-list>
 </web-app>
