--- a/PhoenixTravelAgencyPro/config/dbconfig.properties
+++ b/PhoenixTravelAgencyPro/config/dbconfig.properties
@@ -3,4 +3,4 @@ jdbcurl=jdbc:mysql://localhost:3306/fenghuang?useUnicode=true&characterEncoding=
 #数据库的用户名
 user = root
 #数据库的用户密码u
-password =sa1234
+password =SA1234
